public/assets/css/responsive.css
/* ... */
@media only screen and (min-width: 768px) {

	.main-menu .navigation>li>ul,
	.main-menu .navigation>li>ul>li>ul {
		display: block !important;
		visibility: hidden;
		opacity: 0;
	}
	
}

@media only screen and (max-width: 991px) {
	.main-responsive-container{
		padding-left: 0px !important;
	}
	.banner-nine .slide-item .text-content {
		left: 22%;
	}
	.banner-nine .slide-item .text-content {
		bottom: 250px ;
	}
	.banner-nine .slide-item .slide-count {
		top: 360px;
	}
	.banner-nine .slide-item .image-box {
		top: 25px;
	}
	.main-header-bar {
		width: 80px;
	}

	.main-nav-outer {
		left: 80px;
	}

	.main-header-bar .social-links {
		display: none;
	}

	.main-header-bar .copyright {
		width: 140px;
		left: 25px;
	}

	.main-header-bar .line-two {
		display: none;
		left: 38px;
	}

	.main-header-bar .line-one {
		bottom: 160px;
		left: 38px;
	}

	.main-nav-outer .main-nav-box .main-nav {
		padding-top: 80px;
	}

	.banner-section .slide-item .content {
		padding-left: 80px;
	}

	.main-content-container {
		padding-left: 80px;
	}

	.main-header-bar .alt-logo-box {
		left: 134px;
	}

	.banner-section .slide-item .slide-bar {
		left: 80px;
	}

	.banner-section .slide-item h1 {
		font-size: 32px;
		line-height: 1.25em;
	}

	.btn-style-one {
		padding: 12px 25px 11px;
	}

	.service-block .inner {
		padding-left: 80px;
		padding-right: 20px;
	}

	.service-block .icon-box {
		width: 90px;
	}

	.main-footer .info .text {
		font-size: 20px;
	}

	.main-footer .footer-logo img {
		height: 35px;
	}

	.main-footer {
		padding: 70px 0;
	}

	.main-footer .loc-info {
		padding-top: 10px;
	}

	.banner-two {
		padding-top: 70px;
	}

	.main-footer .scroll-top {
		width: 80px;
		height: 80px;
		line-height: 80px;
		top: -80px;
		font-size: 24px;
		border-radius: 10px 0 0 0;
	}

	.banner-two .slide-item .content-box {
		height: 450px;
	}

	.banner-two .slide-item h2 {
		font-size: 36px;
	}

	.plans-section .text-col h4 {
		font-size: 22px;
	}

	.team-block .name {
		font-size: 20px;
	}

	.def-title-box h3 {
		font-size: 24px;
	}

	.page-title h1 {
		font-size: 48px;
	}

	.contact-section .info-box .info-block:last-child {
		border-top: 1px solid rgba(255, 255, 255, 0.10);
	}

	.blog-details .lower {
		padding: 30px 20px 0;
	}

	.sidebar-page-container .post-author,
	.sidebar-page-container .post-comments,
	.sidebar-page-container .add-comment {
		margin-left: 20px;
		margin-right: 20px;
	}

	.blog-details h3 {
		font-size: 22px;
	}

	.mixitup-gallery .gallery-filters ul li {
		font-size: 15px;
		padding-top: 20px;
		padding-bottom: 20px;
	}

	.portfolio-block h5 {
		font-size: 18px;
	}

	.project-details .text-col .text {
		margin-right: 0;
	}

	.banner-three .slide-item h3 {
		font-size: 22px;
	}

	.portfolio-one .portfolio-item-one,
	.portfolio-one.alternate .portfolio-item-one {
		-ms-flex: 0 0 50%;
		flex: 0 0 50%;
		max-width: 50%;
	}

	.portfolio-one.alternate {
		padding-bottom: 40px;
	}

	.banner-four .banner-content {
		padding-left: 0;
	}

	.banner-four .pager-outer {
		display: none;
	}

	.banner-four .banner-slider-outer {
		padding-bottom: 50px;
	}

	.banner-five .horizontal-scroll-box .portfolio-item-two {
		width: 380px;
		padding-right: 30px;
		margin-bottom: 30px;
	}

	.banner-six .auto-container {
		padding: 0 15px;
	}

	.banner-eleven .slide-item .slide-count {
		display: none;
	}

	.banner-eleven .slide-item .inner {
		margin-left: 50px;
	}

	.banner-eleven .slide-item .image-layer {
		left: 40%;
		margin-left: 100px;
	}

	.banner-eleven .slide-item h1 {
		font-size: 32px;
	}

	.banner-eleven .slide-item .text {
		font-size: 18px;
	}

	.banner-eleven .slide-item .links-box {
		padding-top: 30px;
	}

	.banner-ten .slide-item h1 {
		font-size: 32px;
		line-height: 1.3em;
	}

	.banner-ten .slide-item .bottom-content {
		margin-left: 80px;
	}

	.banner-ten .slide-item .inner {
		margin-left: 0;
	}

	.banner-ten .slide-item .content {
		padding-left: 110px;
	}

	.banner-eight .slide-item .content,
	.banner-eight .bx-controls {
		padding-left: 80px;
	}

	.banner-eight .pager-content {
		padding-left: 80px;
	}

	.banner-eight .pager-box .pager-item {
		width: 140px;
	}

	.banner-eight .slide-item h4 {
		font-size: 18px;
	}

	.banner-eight .slide-item h1 {
		font-size: 36px;
	}

	.banner-nine .slide-item .text-content {
		/* display: none; */
	}

	.banner-nine .slide-item h1 {
		font-size: 44px;
	}

	.banner-nine .slide-item .image-box {
		margin-left: 250px;
	}

	.banner-seven .slide-item h1 {
		font-size: 36px;
	}

	.banner-seven .slide-item .content {
		padding-left: 80px;
	}

	.banner-section .owl-theme .owl-nav .owl-next,
	.banner-section .owl-theme .owl-nav .owl-prev {
		width: 50px;
		height: 50px;
		line-height: 50px;
		font-size: 20px;
	}

}
/* ... */

